--- a/public/beta.html
+++ b/public/beta.html
@@ -1,14 +1,187 @@
-<!doctype html>
-<html lang="zh-cn">
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-  <meta charset="utf-8" />
-  <title>Timeline Viewer</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>电子游戏时间轴 · 重建版</title>
+
+  <!-- ===== 依用户提供：所需样式与库（保留版本号） ===== -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+  <!-- 暂缓加载应用逻辑，待 Step 2 接线
+  <script type="module" src="./src/app.js"></script>
+  -->
+
+  <!-- ===== 布局与占位样式（重建脚手架） ===== -->
+  <style>
+    :root {
+      --gap: 12px;
+      --panel-bg: #f8f9fb;
+      --border: #e5e7eb;
+      --text: #111827;
+    }
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body { margin: 0; color: var(--text); background: #fff; font: 14px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; display: flex; flex-direction: column; }
+
+    header { padding: 12px 16px; border-bottom: 1px solid var(--border); background: #fff; position: sticky; top: 0; z-index: 1000; display: flex; align-items: center; justify-content: space-between; gap: var(--gap); }
+    .brand { font-weight: 700; }
+    #toolbar { display: flex; flex-wrap: wrap; gap: 8px; align-items: center; }
+    #toolbar .btn { height: 30px; padding: 0 10px; border: 1px solid var(--border); background: #fff; border-radius: 6px; cursor: pointer; }
+    #toolbar .btn[disabled] { opacity: .5; cursor: not-allowed; }
+
+    main { display: grid; grid-template-columns: 280px 1fr; gap: var(--gap); padding: var(--gap); }
+    #left-panel { background: var(--panel-bg); border: 1px solid var(--border); border-radius: 10px; padding: 12px; min-height: 120px; }
+    #timeline-panel { border: 1px solid var(--border); border-radius: 10px; padding: 0; min-height: 600px; display: flex; flex-direction: column; }
+
+    /* 来自用户提供的 timeline 与 vis 相关样式 */
+    #timeline { width: 100%; height: 800px; border: 1px solid lightgray; position: relative; }
+    .vis-tooltip { white-space: normal !important; max-width: 700px !important; min-width: 300px; font-size: 10px; line-height: 1.2; padding: 12px; background-color: #fff; border: 1px solid #ccc; box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); }
+    .vis-item { font-size: 10px; padding: 1px 2px; background-color: #f5f5f5; border: 1px solid #aaa; border-radius: 4px; max-width: 300px; }
+    #timeline .vis-item .event-title { margin: 0 !important; line-height: 1.5 !important; }
+
+    /* 颜色选择 UI（轻量样式，仅影响颜色控件） */
+    .color-ui { display: flex; align-items: center; gap: 8px; flex-wrap: wrap; }
+    .color-ui input[type="text"] { width: 110px; padding: 2px 4px; font-size: 12px; }
+    .swatches { display: flex; gap: 6px; flex-wrap: wrap; }
+    .swatch { width: 18px; height: 18px; border: 1px solid #ccc; cursor: pointer; border-radius: 3px; }
+
+    /* 样式面板 toolbar */
+    #style-window .toolbar { display: flex; align-items: center; gap: 10px; flex-wrap: wrap; }
+    #style-window .toolbar .spacer { flex: 1; }
+    #style-window .btn-ghost { background: transparent; border: 0; font-size: 18px; line-height: 1; padding: 2px 6px; cursor: pointer; color: #666; }
+    #style-window .btn-ghost:hover { color: #000; }
+
+    .section-title { font-weight: 600; margin: 8px 0; }
+    .muted { color: #6b7280; font-size: 12px; }
+  </style>
 </head>
 <body>
-  <div id="app">Loading…</div>
+  <header>
+    <div class="brand">电子游戏时间轴 · 重建版</div>
 
-  <!-- 只引入你的前端入口 -->
-  <script type="module" src="./src/app.js"></script>
+    <!-- Step 1：按钮原封不动迁移到此（保持原 onclick / id / 文案） -->
+    <div id="toolbar">
+      <button onclick="openFilterWindow('and')">🔍 过滤标准</button>
+      <button onclick="openStyleWindow('EventType')">事件样式</button>
+      <button onclick="openStyleWindow('Platform')">平台样式</button>
+      <button onclick="openStyleWindow('ConsolePlatform')">主机样式</button>
+      <button onclick="openStyleWindow('Company')">公司样式</button>
+      <button onclick="openStyleWindow('Region')">地区样式</button>
+    </div>
+  </header>
+
+  <main>
+    <aside id="left-panel">
+      <div class="section-title">筛选器（Step 3 占位）</div>
+      <div class="muted">此处先保留容器，等第二步时间轴跑通后再接第三步逻辑。</div>
+      <div id="filters-host"></div>
+
+      <hr style="margin:12px 0; border:none; border-top:1px solid var(--border)" />
+
+      <div class="section-title">样式（Step 4 占位）</div>
+      <div class="muted">样式绑定、规则表与预览等在这里接线。</div>
+      <div id="styles-host"></div>
+    </aside>
+
+    <section id="timeline-panel">
+      <!-- 时间轴容器：与样式配合使用 -->
+      <div id="timeline"></div>
+    </section>
+  </main>
+
+  <!-- ===== 弹窗区：沿用你提供的结构（绝对定位） ===== -->
+  <!-- 过滤逻辑设置弹窗 -->
+  <div id="filter-window" style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); background: #fff; padding: 20px; border: 1px solid #ccc; box-shadow: 0 2px 8px rgba(0,0,0,0.3); display: none; z-index: 2000; max-height: 80vh; overflow: auto; width: 700px;">
+    <h3>过滤标准（和逻辑）</h3>
+    <button onclick="openAddFilter()">增加过滤标准</button>
+    <button onclick="resetFilters()">复原过滤标准</button>
+    <button onclick="applyFilters()">应用和逻辑</button>
+    <button onclick="applyFiltersOr()">应用或逻辑</button>
+    <button onclick="document.getElementById('filter-window').style.display='none'">关闭</button>
+    <div id="current-filters"></div>
+  </div>
+
+  <!-- 添加过滤标准弹窗 -->
+  <div id="add-filter-window" style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); background: #fff; padding: 20px; border: 1px solid #ccc; box-shadow: 0 2px 8px rgba(0,0,0,0.3); display: none; z-index: 2000; max-height: 80vh; overflow: auto; width: 700px; height: 300px;">
+    <h3>新增过滤标准</h3>
+    <label>过滤属性：<select id="filter-attribute"></select></label><br>
+    <label>过滤选项：<select id="filter-options" multiple></select></label><br>
+    <button onclick="confirmAddFilter()">确定</button>
+    <button onclick="document.getElementById('add-filter-window').style.display='none'">取消</button>
+  </div>
+
+  <!-- 属性多选弹窗（复用 Choices，可搜索，可多选） -->
+  <div id="attr-picker-window" style="display:none; position:absolute; top:120px; left:50%; transform:translateX(-50%); width:700px; background:#fff; border:1px solid #ccc; padding:16px; box-shadow:0 2px 8px rgba(0,0,0,.3); z-index:2100; max-height:70vh; overflow:auto;">
+    <h3 id="attr-picker-title" style="margin:0 0 8px;">选择应用的属性值</h3>
+    <div id="attr-picker-hint" style="color:#666; margin-bottom:8px;"></div>
+
+    <div style="margin:6px 0 8px;">
+      <button id="attr-picker-select-all" type="button">全选</button>
+      <button id="attr-picker-clear" type="button">全不选</button>
+    </div>
+
+    <div style="margin-bottom:8px;">
+      <div id="attr-picker-attrname" style="margin-bottom:6px; color:#333;">属性值</div>
+      <select id="attr-picker-options" multiple></select>
+    </div>
+
+    <div style="margin-top:10px; text-align:right;">
+      <button id="attr-picker-confirm" style="margin-right:8px;">确定</button>
+      <button id="attr-picker-cancel">取消</button>
+    </div>
+  </div>
+
+  <!-- 样式弹窗（整块替换当前散落控件） -->
+  <div id="style-window" style="display:none; position:absolute; top:100px; left:50%; transform:translateX(-50%); width:700px; height:400px; background:#fff; border:1px solid #ccc; padding:20px; box-shadow:0 2px 8px rgba(0,0,0,0.3); overflow:auto; z-index:2000;">
+    <h3 id="style-title">属性样式</h3>
+
+    <div class="toolbar" style="margin-bottom:10px;">
+      <label>自定义样式：
+        <select id="style-type" onchange="onStyleTypeChange()">
+          <option value="none">无</option>
+          <option value="font">字体</option>
+          <option value="fontColor">字体颜色</option>
+          <option value="borderColor">事件框颜色</option>
+          <option value="backgroundColor">事件框填充色</option>
+          <option value="haloColor">光晕颜色</option>
+        </select>
+      </label>
+
+      <span id="bound-type-hint" style="color:#666;">当前样式：无</span>
+      <span class="spacer"></span>
+
+      <button id="style-confirm-btn" disabled>确认绑定</button>
+      <button id="style-reset-btn" style="display:none;">重置</button>
+      <button class="btn-ghost" onclick="closeStyleWindow()" aria-label="关闭">×</button>
+    </div>
+
+    <div>
+      <button id="add-style-btn" onclick="addStyleRow()" disabled>新增样式</button>
+    </div>
+
+    <table id="style-table" border="1" style="width:100%; margin-top:10px; border-collapse:collapse;">
+      <thead>
+        <tr>
+          <th>样式内容</th>
+          <th>应用属性</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody id="styleTableBody">
+        <!-- 动态添加行 -->
+      </tbody>
+    </table>
+
+    <div style="margin-top:10px; text-align:right;">
+      <button id="style-save" type="button" class="btn-primary" onclick="confirmStyle()">确定</button>
+      <button id="style-cancel" type="button" onclick="closeStyleWindow()">取消</button>
+    </div>
+  </div>
+
 </body>
 </html>
